--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,7 @@
      <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%# ログインしているユーザーと出品しているユーザーが違う場合 %>
-   <% else current_user.id != @item.user_id %>
+   <% else %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
     <%# //ログインしているユーザーと出品しているユーザーが違う場合 %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
@@ -105,9 +105,9 @@
       後ろの商品 ＞
     </a>
   </div>
-  <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
-  <a href="#" class="another-item"><%= "商品のカテゴリー名" %>をもっと見る</a>
-  <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
+  <%# 商品のカテゴリー名の表示 %>
+  <a href="#" class="another-item"><%= @item.category.name %>をもっと見る</a>
+  <%# //商品のカテゴリー名の表示 %>
 </div>
 
 <%= render "shared/footer" %>
