--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%# ログインしているユーザーと出品しているユーザーが違う場合 %>
    <% else %>
-    <%= link_to "購入画面に進む", orders_path ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
     <%# //ログインしているユーザーと出品しているユーザーが違う場合 %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
     <% end %>
