--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
-  <%= stylesheet_link_tag 'application', media: 'all'%>
-  <%= javascript_pack_tag 'application' %>
+  <%= stylesheet_link_tag 'application', media: 'all'%>    <%#購入情報実装前から変更なし%>
+  <%= javascript_pack_tag 'application' %>                 <%#購入情報実装前から変更なし%>
 </head>
 
 <body>
