--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,7 +31,11 @@
     </div>
     <%# /支払額の表示 %>
 
+    
+
     <%= form_with model:@order_buy, url:item_orders_path(@item.id),id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+
+    <%= render 'shared/error_order_buy', model: f.object %> 
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
