--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,8 +26,8 @@
     </div>
 
     <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合 %>
-   <% if user_signed_in? %>
-    <% if current_user.id == @item.user_id %>
+   <% if user_signed_in? && @item.buy == nil %>
+    <% if current_user.id == @item.user_id  %>
      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
      <p class="or-text">or</p>
      <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
