--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,22 +24,23 @@
         <%= @item.burden.name %>
       </span>
     </div>
-
-    <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合 %>
+    <%# 条件分岐がいつくかありますのでコメントアウトしています%>
+    <%# ログイン状態であり、かつ商品が購入済みでない場合表示 %>
    <% if user_signed_in? && @item.buy == nil %>
+    <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合 %>
     <% if current_user.id == @item.user_id  %>
      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
      <p class="or-text">or</p>
      <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%# ログインしているユーザーと出品しているユーザーが違う場合 %>
+    
+    <%# ログインしているユーザーと出品しているユーザーが違う場合 かつ購入済み出ない場合表示%>
    <% else %>
     <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
-    <%# //ログインしているユーザーと出品しているユーザーが違う場合 %>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
+  
+    
     <% end %>
    <% end %>
-    <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合 %>
+    <%# // ログイン状態であり、かつ商品が購入済みでない場合表示%>
 
     <div class="item-explain-box">
       <span><%= @item.explanation %></span>
